--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "typescript": "^4.5.5"
    },
    "dependencies": {
+      "@mxgnus/slashcommands.js": "^2.1.0",
       "axios": "^0.26.0",
       "colors": "^1.4.0",
       "discord.js": "^13.6.0",
