--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
    "author": "",
    "license": "ISC",
    "devDependencies": {
+      "prisma": "^3.11.0",
       "ts-node-dev": "^1.1.8",
       "typescript": "^4.5.5"
    },
    "dependencies": {
       "@mxgnus/slashcommands.js": "^2.1.0",
+      "@prisma/client": "^3.11.0",
       "axios": "^0.26.0",
       "colors": "^1.4.0",
+      "discord-modals": "^1.3.2",
       "discord.js": "^13.6.0",
       "dotenv": "^16.0.0",
       "moment": "^2.29.1"
