--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ UPLOAD_KEY=
 AUTO_REACTION_CHANNELS=
 CHANNEL_APPLICATIONS=
 DATABASE_URL=
+YOUTUBE_CHANNEL_ID=
+YOUTUBE_DISCORD_CHANNEL_ID=
+PORT=
