--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
    "author": "",
    "license": "ISC",
    "devDependencies": {
+      "@types/express": "^4.17.13",
+      "@types/yt-search": "^2.3.2",
       "prisma": "^3.11.0",
       "ts-node-dev": "^1.1.8",
       "typescript": "^4.5.5"
@@ -25,6 +27,9 @@
       "discord-modals": "^1.3.2",
       "discord.js": "^13.6.0",
       "dotenv": "^16.0.0",
-      "moment": "^2.29.1"
+      "express": "^4.17.3",
+      "moment": "^2.29.1",
+      "youtube-notification": "^1.1.0",
+      "yt-search": "^2.10.3"
    }
 }
