added thread coding help system

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,6 @@ RULES_CHANNEL_ID=
 GET_ROLES_CHANNEL_ID=
 DEVELOPER_ROLE_ID=
 MENTION_DEVELOPER_ROLE_ID=
-DEFAULT_ROLE_ID=
 DEVELOPER_EMOJI_ID=
 MENTION_DEVELOPER_EMOJI_ID=
 PREFIX=
@@ -17,3 +16,5 @@ DATABASE_URL=
 YOUTUBE_CHANNEL_ID=
 YOUTUBE_DISCORD_CHANNEL_ID=
 PORT=
+DISCORD_CODING_BETA=
+DISCORD_CODING_BETA_NOTIFY=
