--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
    "devDependencies": {
       "@types/express": "^4.17.13",
       "@types/yt-search": "^2.3.2",
+      "nodemon": "^2.0.20",
       "prisma": "^3.11.0",
       "ts-node-dev": "^1.1.8",
       "typescript": "^4.5.5"
